# kitty-remote-bindings

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  aggregated_changelog.md  cog.toml  flake.nix
.woodpecker/: publish.yaml
core/: CHANGELOG.md  Cargo.toml
core/src/: lib.rs
lib/: Cargo.toml
lib/src/: command.rs  lib.rs  model.rs  remote_command.rs
lib/src/command/: focus_window.rs  launch.rs  ls.rs  options.rs  send_text.rs
lib/src/remote_command/: focus_window.rs  launch.rs  ls.rs  options.rs  send_text.rs
macros/: CHANGELOG.md  Cargo.toml
macros/src/: kitty_command.rs  kitty_command_option.rs  lib.rs  match_field.rs
macros/tests/: derive_kitty_command.rs  derive_kitty_command_option.rs
src/: executor.rs  kitty.rs  kitty_terminal.rs  lib.rs  model.rs  remote_command.rs
src/remote_command/: focus_window.rs  ls.rs  options.rs  send_text.rs
