[workspace]
resolver = "2"
members = [] 

[workspace.package]
include = [
  "src/**/*",
  "./Cargo.toml",
  "./Cargo.lock",
  "./README.md"
]

[package]
name = "kitty-remote-bindings"
version = "0.1.0"
edition = "2021"
include.workspace = true
license = "MIT"
description = "Bindings for Kitty Terminal's remote commands"
homepage = "https://git.vdx.hu/voidcontext/kitty-remote-bindings"
repository = "https://git.vdx.hu/voidcontext/kitty-remote-bindings"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.190", features = ["serde_derive"]}
serde_json = "1.0.108"
thiserror = "1.0.50"

[dev-dependencies]
lazy_static = "1.4.0"
pretty_assertions = "1.4.0"
