[workspace]
resolver = "2"
members = [
  "lib",
  "macros"
]

[workspace.package]
name = "kitty-remote-bindings-workspace"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://git.vdx.hu/voidcontext/kitty-remote-bindings"
repository = "https://git.vdx.hu/voidcontext/kitty-remote-bindings"
